--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,17 +2,11 @@ name: GomokuMC
 main: org.us._42.laphicet.gomoku.minecraft.GomokuMC
 version: 0.0.1
 author: apuel & mlu
+api-version: 1.13
 
 commands:
-  test:
-    description: test
-    usage: /test
-    permission: gomoku.test
-    permission-message: You don't have access to this command!
-
   startgame:
     description: To start game
     usage: /startgame
     permission: gomoku.startgame
     permission-message: You don't have access to this command!
-    
